--- a/CODE/styles.css
+++ b/CODE/styles.css
@@ -35,3 +35,19 @@ img {
     width: 50px;
     height: 50px;
 }
+
+.image-panel {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
+
+.image-panel img {
+    display: block;
+    margin-bottom: 10px;
+}
