--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 
 button {
     margin: 10px;
+
 }
 
 canvas {
@@ -39,11 +40,11 @@ img {
 .image-panel {
     display: none;
     position: absolute;
-    top: 0;
+    top: 100px;
     left: 0;
     width: 200px;
     padding: 10px;
-    background-color: #fff;
+    background-color: #ffffff;
     border: 1px solid #ccc;
 }
 
@@ -51,3 +52,19 @@ img {
     display: block;
     margin-bottom: 10px;
 }
+
+
+  
+/* Dropdown content */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Show the dropdown menu when the user clicks on the button */
+.show {display: block;}
+  
